--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
         </div>
 
         <div class="mt-3">
-            <label for="nevKamat"
+            <label for="nevlegesKamat"
             class="form-label">Névleges kamat(%)</label>
 
-            <input type="text" id="nevKamat"
+            <input type="text" id="nevlegesKamat"
             class="form-control">
         </div>
 
@@ -41,10 +41,10 @@
         </div>
 
         <div class="mt-3 me-3" id="result">
-            <label for="kamat"
+            <label for="tenylegesKamat"
             class="form-label">Tényleges éves kamat</label>
             
-            <input type="text" id="kamat"
+            <input type="text" id="tenylegesKamat"
             class="form-control" readonly>
         </div>
 
