--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,13 @@
+<!--
+File: index.html
+Author: Szinyei Mikes
+Copyright: 2023, Szinyei Mikes
+Group: Szoft I-2 N
+Date: 2023-03-23
+Github: https://github.com/MikesSzinyei/
+Licenc: GNU GPL 
+-->
+
 <!DOCTYPE html>
 <html lang="hu">
 <head>
